@@ -2086,11 +2086,16 @@ static int NumericValue(int c)
 	    YYTEXT_PUSH(c, yyp);
 	    while(isdigit(c = xxgetc()) || ('a' <= c && c <= 'f') ||
 		  ('A' <= c && c <= 'F') || c == '.') {
+		if (c == '.') {
+		    if (seendot) return ERROR;
+		    seendot = 1;
+		}
 		YYTEXT_PUSH(c, yyp);
 		nd++;
 	    }
 	    if (nd == 0) return ERROR;
 	    if (c == 'p' || c == 'P') {
+	        seenexp = 1;
 		YYTEXT_PUSH(c, yyp);
 		c = xxgetc();
 		if (!isdigit(c) && c != '+' && c != '-') return ERROR;
@@ -2102,6 +2107,7 @@ static int NumericValue(int c)
 		    YYTEXT_PUSH(c, yyp);
 		if (nd == 0) return ERROR;
 	    }
+            if (seendot && !seenexp) return ERROR;
 	    break;
 	}
 	if (c == 'E' || c == 'e') {
@@ -2126,7 +2132,7 @@ static int NumericValue(int c)
 	YYTEXT_PUSH(c, yyp);
 	last = c;
     }
-    YYTEXT_PUSH('\0', yyp);
+    YYTEXT_PUSH('\0', yyp);    
     /* Make certain that things are okay. */
     if(c == 'L') {
 	double a = R_atof(yytext);
